--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "send": "./app.js"
   },
   "imports": {
-    "#lib/*": "./lib/*.js"
+    "#lib/*": "./lib/*.js",
+    "#modules/*": "./modules/*.js"
   },
   "exports": {
-    ".": "./lib/push.js"
+    ".": "./lib/send.js"
   },
   "repository": {
     "type": "git",
@@ -29,12 +30,14 @@
     "node": ">=18.0.0"
   },
   "dependencies": {
-    "@momsfriendlydevco/axiosy": "^1.1.0",
     "@momsfriendlydevco/joyful": "^1.0.1",
     "@slack/web-api": "^7.3.4",
+    "axios": "^1.7.5",
     "commander": "^9.4.1",
     "commander-extras": "^1.4.0",
-    "joi": "^17.7.0"
+    "nodemailer": "^6.9.14",
+    "nodemailer-mailgun-transport": "^2.1.5",
+    "split-string": "^6.1.0"
   },
   "devDependencies": {
     "@momsfriendlydevco/eslint-config": "^2.0.4",
